--- a/017.html
+++ b/017.html
@@ -77,15 +77,15 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
                     <div class="detail-value " id="reqNo">A4100002024052079494</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">河南省，湖北省</div></li>
+				<div class="detail-value " id="passDists">湖北省，河南省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
                     <div class="detail-value " id="passDate">2024年05月20日18时05分至 2024年05月25日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">河南省</span>: 潢川收费站--G40沪陕高速-G45大广高速--豫鄂界；<br><hr>
-<span id="pro">湖北省</span>:鄂豫界--G45大广高速--麻城收费站<br><hr></div></li>
+<span id="pro">湖北省</span>: 周家塆--G106--沪蓉大道--麻城东收费站--G42沪蓉高速--G45大广高速--鄂豫界；<br><hr>
+<span id="pro">河南省</span>:豫鄂界--G45大广高速--光山东收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台伟驰货物运输有限公司</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -134,8 +134,8 @@
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
-河南省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
-湖北省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
+湖北省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
+河南省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
