--- a/004.html
+++ b/004.html
@@ -75,17 +75,17 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A4400002024051603926</div></li>
+                    <div class="detail-value " id="reqNo">A4400002024051703926</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">广东省，福建省</div></li>
+				<div class="detail-value " id="passDists">广东省，广西壮族自治区</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2024年05月17日20时45分至 2024年05月31日 23时59分</div></li>
+                    <div class="detail-value " id="passDate">2024年05月20日21时45分至 2024年05月31日 23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">广东省</span>:金丰城大厦--G228--G236--海丰收费站--G1523甬莞高速--粤闽界；<br><hr>
-<span id="pro">福建省</span>:闽粤界--G1523甬莞高速--诏安霞葛收费站--S309--黎明村<br><hr></div></li>
+<span id="pro">广东省</span>:庞建混泥土有限公司---迎宾北路---包茂大道---茂名电白收费站---G65包茂高速---粤桂界；<br><hr>
+<span id="pro">广西壮族自治区</span>:桂粤界---65包茂高速---岑溪东收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">刘杰昆</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -98,11 +98,11 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">旋挖钻机</div></li>
+                    <div class="detail-value " id="cargoInfo">挖机</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
                     <div class="detail-value " id="cargoWeight">50.00吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
-                    <div class="detail-value " id="cargoOutline">13.00 × 3.75 × 3.60</div></li>
+                    <div class="detail-value " id="cargoOutline">18.00 × 3.75 × 3.60</div></li>
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">车辆信息</li> <!-- 车辆信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">牵引车车号牌：</div>
@@ -122,7 +122,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">车货总重量：</div>
                     <div class="detail-value " id="totalWeight">67.00吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">车货外廓尺寸(米)：</div>
-                    <div class="detail-value " id="totalOutline">24.00 × 3.75× 4.50</div></li>
+                    <div class="detail-value " id="totalOutline">27.00 × 3.75× 4.50</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">轴荷分布：</div>
                     <div class="detail-value " id="axlesLoad">10+20+3*18</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class=" detail-name-blod">车货总体轮廓图：</div>
@@ -135,7 +135,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
 广东省：<br>交通部门意见:同意通行。 <br>公安部门意见:暂无！<br><hr>
-福建省：<br>交通部门意见:同意通行。<br>公安部门意见:暂无！<br><hr></div></li>                
+广西壮族自治区：<br>交通部门意见:同意通行。<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
