--- a/017.html
+++ b/017.html
@@ -84,8 +84,8 @@
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">贵州省</span>: 孟关收费站--G69银百高速--湘鄂界；<br><hr>
-<span id="pro">广西壮族自治区</span>:鄂湘界--G69银百高速--凌云收费站<br><hr></div></li>
+<span id="pro">贵州省</span>: 孟关收费站--G69银百高速--黔桂界；<br><hr>
+<span id="pro">广西壮族自治区</span>:桂黔界--G69银百高速--凌云收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台程玖汽车贸易有限公司</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
