--- a/004.html
+++ b/004.html
@@ -84,8 +84,8 @@
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">福建省</span>:中国平和琯溪生态蜜柚产业园--山旧线--平和收费站--G1523甬莞高速--闽粤界；<br><hr>
-<span id="pro">广东省</span>:粤闽界--G1523甬莞高速--意溪收费站<br><hr></div></li>
+<span id="pro">福建省</span>:林艺腾铁件加工--坂云线--平和坂仔收费站--S62平梅高速-- G1523甬莞高速--闽粤界；<br><hr>
+<span id="pro">广东省</span>:粤闽界--G1523甬莞高速--S11大潮高速--G15沈海高速--钱东收费站--X086--日耀建材沙石场<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">范哲宇</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
