--- a/006.html
+++ b/006.html
@@ -77,15 +77,15 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
                     <div class="detail-value " id="reqNo">A4400002024053109151</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">广东省，广西壮族自治区</div></li>
+				<div class="detail-value " id="passDists">广东省，江西省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2024年06月03日11时30分至 2024年06月30日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2024年06月03日15时30分至 2024年06月30日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">广东省</span>:坪郊小学--G325--阳江收费站--G15沈海高速--S51肇阳高速--S14汕湛高速--S51肇阳高速--G80广昆高速--粤桂界；<br><hr>
-<span id="pro">广西壮族自治区</span>:桂粤界--G80广昆高速--G65包茂高速--梧州西收费站<br><hr></div></li>
+<span id="pro">广东省</span>:一顺便利店--G325--水口收费站--G15沈海高速--G1508广州绕城高速--S6广龙高速--G0422武深高速--G45大广高速--粤赣界；<br><hr>
+<span id="pro">江西省</span>:赣粤界--G45大广高速--全南收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -135,7 +135,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
 广东省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
-广西壮族自治区：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
+江西省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
