--- a/007.html
+++ b/007.html
@@ -112,7 +112,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">牵引车整备质量：</div>
                     <div class="detail-value" id="vehWeight">8.805吨</div></li>                
                 <li class="han-veh ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">挂车车号牌：</div>
-                    <div class="detail-value" id="hanvehicleNo">鲁H8U3F挂</div></li>
+                    <div class="detail-value" id="hanvehicleNo">鲁HC54P挂</div></li>
                 <li class="han-veh ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">挂车厂牌型号：</div>
                     <div class="detail-value" id="hanmodel">LWY9402TDP</div></li>
                 <li class="han-veh ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">挂车整备质量：</div>
