--- a/004.html
+++ b/004.html
@@ -79,12 +79,12 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
 				<div class="detail-value " id="passDists">广东省，福建省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2024年06月24日09时42分至 2024年06月30日 23时59分</div></li>
+                    <div class="detail-value " id="passDate">2024年06月24日10时12分至 2024年06月30日 23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">广东省</span>:中国南方电网--G206--附城收费站--G78汕昆高速--G1523甬莞高速--粤闽界；<br><hr>
+<span id="pro">广东省</span>:中国南方电网--G206--锡场收费站--G78汕昆高速--G1523甬莞高速--粤闽界；<br><hr>
 <span id="pro">福建省</span>:闽粤界--G1523甬莞高速--平和三平收费站--G355--漳州信坤木业有限公司<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">范哲宇</div></li>
