--- a/5.html
+++ b/5.html
@@ -40,13 +40,13 @@
 	<div class="mui-input-group">
 		<div class="small-title-class">基础信息</div>
 		<div class="mui-input-row " id="rowNo">	
-			<span class="title">许可证号：</span><span id="xkNo">A4400002024042553397【2类件】</span>
+			<span class="title">许可证号：</span><span id="xkNo">A4400002024060707211【2类件】</span>
 		</div>
 		<div class="mui-input-row ">	
 			<span class="title">有效范围：</span><span id="pass_dist_name">广东，广西</span>
 		</div>
 		<div class="mui-input-row ">	
-			<span class="title">通行时间：</span><span id="pass_date">2024-04-26 17:35 至 2024-05-06 23:59</span>
+			<span class="title">通行时间：</span><span id="pass_date">2024-06-12 10:10 至 2024-06-20 23:59</span>
 		</div>
 		<div class="mui-input-row ">	
 			<span class="title">通行次数：</span><span id="txcs">单次</span>
@@ -54,8 +54,8 @@
 		<div class="mui-input-row ">	
 			<span class="title">通行路线：</span>
 			<div id="route-list">
-广东：小洞工业区--G359--S362--荷城收费站--G9411莞佛高速--G15沈海高速--G55二广高速--G78汕昆高速--粤桂界<br>
-广西：桂粤界--G78汕昆高速--信都收费站</div>
+广东：广州商学院--S378--X307--钟落潭东收费站--S45从埔高速--G4京港澳高速--G0425广澳高速--S5广台高速--S47广佛江珠高速--S5广台高速--G2518深岑高速--粤桂界<br>
+广西：桂粤界--G2518深岑高速--归义收费站</div>
 		</div>
 		<div class="mui-input-row ">	
 			<span class="title">承运单位：</span><span id="applicantName">邢台伟驰货物运输有限公司</span>
@@ -73,7 +73,7 @@
 			<span class="title">货物名称：</span><span id="cargo_name">挖机</span>
 		</div>
 		<div class="mui-input-row ">	
-			<span class="title">货物重量：</span><span id="cargo_weight">43.000吨</span>
+			<span class="title">货物重量：</span><span id="cargo_weight">41.000吨</span>
 		</div>
 		<div class="mui-input-row ">	
 			<span class="title">货物外廓尺寸(米)：</span><span id="cargo_out">12.00x3.75x3.60</span>
@@ -90,10 +90,10 @@
 		
 		<div class="small-title-class">车货总体信息</div>
 		<div class="mui-input-row ">	
-			<span class="title">车货总重量：</span><span id="total_weight">60.000吨</span>
+			<span class="title">车货总重量：</span><span id="total_weight">58.000吨</span>
 		</div>
 		<div class="mui-input-row ">	
-			<span class="title">车货外廓尺寸(米)：</span><span id="total_out">22.00x3.75x4.50</span>
+			<span class="title">车货外廓尺寸(米)：</span><span id="total_out">24.00x3.75x4.50</span>
 		</div>
 		<div class="mui-input-row ">	
 			<span class="title">轴荷分布：</span><span id="axles_load">10+20+30</span>
@@ -116,7 +116,7 @@
 		
 	</div>
 	
-    <div id="tip" class="tip"><span id="tipMsg">当前有效</span></div>
+    <div id="tip" class="tip"><span id="tipMsg">此证失效</span></div>
     <script type="text/javascript" charset="utf-8">	
     
 	    $().ready(function() {
